--- a/frontend/src/app/components/view-event/view-event.component.html
+++ b/frontend/src/app/components/view-event/view-event.component.html
@@ -47,7 +47,7 @@
                     <div class="form-group">
                         <div >
                             
-                            <table class="table mt-3 col-md-12 " id="expensestable">
+                            <table class="table mt-3 col-md-12 table-responsive" id="expensestable">
                                 <thead>
                                     <tr>
                                         <th scope="col">Index</th>
