--- a/frontend/src/app/components/home-page/home-page.component.html
+++ b/frontend/src/app/components/home-page/home-page.component.html
@@ -17,7 +17,7 @@
         </div>
       </div>
       <div class="col mt-3">
-        <img src="https://img.freepik.com/free-vector/gift-shopping-checklist-girl-cartoon-character-buying-presents-online-e-commerce-gift-card-promotion-birthday-anniversary-bonus_335657-77.jpg" class="" alt="">
+        <img src="https://img.freepik.com/free-vector/gift-shopping-checklist-girl-cartoon-character-buying-presents-online-e-commerce-gift-card-promotion-birthday-anniversary-bonus_335657-77.jpg" class="img-fluid" alt="">
       </div>
     </div>
 </div>
