--- a/frontend/src/app/components/view-event/view-event.component.html
+++ b/frontend/src/app/components/view-event/view-event.component.html
@@ -74,6 +74,9 @@
                     </div>
                 </div>
                 <div class="text-center" *ngIf="activityflag"><h4>No activity for this event</h4></div>
+                <div class="col-md-12 text-center mt-3">
+                    <button type="button" routerLink="/userdashboard" class=" btn btn-block mybtn btn-primary tx-tfm">&larr;back</button>
+                </div>
             </div>
         </div>
     </div>
