--- a/frontend/src/app/components/add-event/add-event.component.css
+++ b/frontend/src/app/components/add-event/add-event.component.css
@@ -23,12 +23,12 @@ body {
     flex-direction: column;
     width: 100%;
     pointer-events: auto;
-    background-color: #fff;
+    background-color: #fde9fc;
     background-clip: padding-box;
     border: 2px solid rgba(0, 0, 0, .2);
     border-image: linear-gradient(to right, rgba(106, 17, 203, 0.9), rgba(37, 117, 252, 0.9)) 1;
 
-    border-radius: 1.1rem;
+    /* border-radius: 1.1rem; */
     outline: 0;
     max-width: 500px;
   }
@@ -49,7 +49,9 @@ body {
     padding-top: 10px;
     padding-bottom: 10px;
   }
-  
+  input{
+    background-color: #fcf5fb;
+  }
   .span-or {
     display: block;
     position: absolute;
